--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="site.css">
 </head>
 <body>
-    <h1>Welcome</h1>
+    <h1>Welcome to my new website</h1>
 </body>
 </html>
